eum-services-k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eum
  labels:
    app.kubernetes.io/part-of: eum
